ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  tls: 
    - secretName: ingress-tls
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: votecluster
              port:
                number: 80
